--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=10000
-DB_HOST=tu_hostinger_mysql
-DB_USER=usuario
-DB_PASS=contraseña
-DB_NAME=nombre_base
+DB_HOST=srv1960.hstgr.io
+DB_USER=u985332196_impuestosdgo
+DB_PASS=DGO2025AL
+DB_NAME=u985332196_Turnos
