--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "sistema-turnos",
   "version": "1.0.0",
-  "description": "Sistema de turnos con Node.js, Socket.IO y MySQL",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "express-session": "^1.17.3",
-    "mysql2": "^3.6.0",
-    "dotenv": "^16.3.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "mysql2": "^3.14.0",
+    "socket.io": "^4.8.1",
     "xlsx": "^0.18.5"
   }
 }
